--- a/index.html
+++ b/index.html
@@ -7,34 +7,32 @@
     <title>Odin Landing Page</title>
   </head>
   <body>
-    <!-- MAIN CONTAINER -->
-    <div class="main-container">
-      <!-- HEADER -->
-      <header class="header">
-        <h1 class="logo">Header Logo</h1>
-        <ul class="links">
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
-        </ul>
-      </header>
-      <!-- HERO SECTION -->
-      <div class="hero">
-        <div class="content">
-          <h2 class="primary-heading">This Website is awesome</h2>
-          <p class="text">
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.
-          </p>
-          <button class="button">Sign up</button>
-        </div>
-        <img
-          src="./images/hero-image.jpg"
-          alt="Chess board"
-          width="250px"
-          height="auto"
-        />
+    <!-- HEADER -->
+    <header class="header dark-background">
+      <div class="logo"><strong>Header Logo</strong></div>
+      <ul class="links">
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
+      </ul>
+    </header>
+    <!-- HERO SECTION -->
+    <div class="hero-section dark-background">
+      <div class="content">
+        <h1 class="primary-heading">This Website is awesome</h1>
+        <p class="secondary-text">
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast.
+        </p>
+        <button class="button sign-up">Sign up</button>
       </div>
+      <img
+        class="image"
+        src="./images/hero-image.jpg"
+        alt="Chess board"
+        width="250px"
+        height="auto"
+      />
     </div>
   </body>
 </html>
