--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header dark-background">
-      <div class="logo"><strong>Header Logo</strong></div>
-      <ul class="links">
-        <li><a href="#">header link one</a></li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link three</a></li>
-      </ul>
-    </header>
-    <!-- HERO SECTION -->
-    <div class="hero-section dark-background">
-      <div class="content">
-        <h1 class="primary-heading">This Website is awesome</h1>
-        <p class="secondary-text">
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower contrast.
-        </p>
-        <button class="button sign-up">Sign up</button>
+    <div class="container dark-background">
+      <header class="header">
+        <div class="logo"><strong>Header Logo</strong></div>
+        <ul class="links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </header>
+      <!-- HERO SECTION -->
+      <div class="hero-section">
+        <div class="content">
+          <h1 class="primary-heading">This Website is awesome</h1>
+          <p class="secondary-text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button class="button sign-up">Sign up</button>
+        </div>
+        <img
+          class="image"
+          src="./images/hero-image.jpg"
+          alt="Chess board"
+          width="250px"
+          height="auto"
+        />
       </div>
-      <img
-        class="image"
-        src="./images/hero-image.jpg"
-        alt="Chess board"
-        width="250px"
-        height="auto"
-      />
     </div>
   </body>
 </html>
