--- a/index.html
+++ b/index.html
@@ -36,5 +36,36 @@
         />
       </div>
     </div>
+    <!-- INFO SECTION -->
+    <div class="info-section">
+      <h2 class="secondary-heading">Some Random Info</h2>
+
+      <div class="info-cards-container">
+        <div class="info-card">
+          <div class="icon"></div>
+          <p class="text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="icon"></div>
+          <p class="text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="icon"></div>
+          <p class="text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="icon"></div>
+          <p class="text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
