Update info section heading and enhance styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <!-- INFO SECTION -->
     <div class="info-section">
-      <h2 class="secondary-heading">Some Random Info</h2>
+      <h2 class="secondary-heading">Some Random Information</h2>
 
       <div class="info-cards-container">
         <div class="info-card">
