--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="hero-section">
         <div class="content">
           <h1 class="primary-heading">This Website is awesome</h1>
-          <p class="secondary-text">
+          <p class="text secondary-text">
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast.
           </p>
@@ -65,6 +65,17 @@
             this is some subtext under an illustration or image
           </p>
         </div>
+      </div>
+    </div>
+    <!-- QUOTE SECTION -->
+    <div class="quote-section">
+      <div class="quote-container">
+        <p class="quote text">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p class="author text">-Thor, God of Thunder</p>
       </div>
     </div>
   </body>
