Fix punctuation in testimonial author attribution

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           it's just filling up space, or maybe people will actually read it. Who
           knows? All I know is that it looks nice.
         </p>
-        <p class="author text">-Thor, God of Thunder</p>
+        <p class="author text">— Thor, God of Thunder</p>
       </div>
     </div>
   </body>
