Add call-to-action section with sign-up prompt and button

--- a/index.html
+++ b/index.html
@@ -78,5 +78,15 @@
         <p class="author text">— Thor, God of Thunder</p>
       </div>
     </div>
+    <!-- CTA SECTION -->
+    <div class="cta-section">
+      <div class="cta-container">
+        <h3 class="tertiary-headi">Call to action! It's time!</h3>
+        <p class="text">
+          Sign up for our product by clicking that button right over there!
+        </p>
+        <button class="button">Sign up</button>
+      </div>
+    </div>
   </body>
 </html>
