Fix typo in CTA section heading and update button style

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     <!-- CTA SECTION -->
     <div class="cta-section">
       <div class="cta-container">
-        <h3 class="tertiary-headi">Call to action! It's time!</h3>
+        <h3 class="tertiary-heading">Call to action! It's time!</h3>
         <p class="text">
           Sign up for our product by clicking that button right over there!
         </p>
-        <button class="button">Sign up</button>
+        <button class="button button-outline">Sign up</button>
       </div>
     </div>
   </body>
