Wrap CTA section content in a div for improved structure

--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
     <!-- CTA SECTION -->
     <div class="cta-section">
       <div class="cta-container">
-        <h3 class="tertiary-heading">Call to action! It's time!</h3>
-        <p class="text">
-          Sign up for our product by clicking that button right over there!
-        </p>
+        <div class="cta-content">
+          <h3 class="tertiary-heading">Call to action! It's time!</h3>
+          <p class="text">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+
         <button class="button button-outline">Sign up</button>
       </div>
     </div>
