Add footer section with copyright notice

--- a/index.html
+++ b/index.html
@@ -91,5 +91,9 @@
         <button class="button button-outline">Sign up</button>
       </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <p class="copyright text">Copyright © The Odin Project 2025</p>
+    </footer>
   </body>
 </html>
