--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </div>
     <!-- FOOTER -->
-    <footer class="footer">
+    <footer class="footer dark-background">
       <p class="copyright text">Copyright © The Odin Project 2025</p>
     </footer>
   </body>
