Update footer to include creator attribution with a link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
     </div>
     <!-- FOOTER -->
     <footer class="footer dark-background">
-      <p class="copyright text">Copyright © The Odin Project 2025</p>
+      <p class="copyright text">
+        Copyright © The Odin Project 2025 — Created By
+        <a
+          href="https://x.com/mhmkhizar"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Muhammad Khizar</a
+        >
+      </p>
     </footer>
   </body>
 </html>
