Update footer link to point to GitHub profile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p class="copyright text">
         Copyright © The Odin Project 2025 — Created By
         <a
-          href="https://x.com/mhmkhizar"
+          href="https://github.com/mhmkhizar/"
           target="_blank"
           rel="noopener noreferrer"
           >Muhammad Khizar</a
